---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "proc p(_:1..0) end p"
---
"p"@"src/main.t:5..6" [Subprogram(Procedure)]: procedure ( pass(value) range of `int` (Unevaluated(PackageId(3072), BodyId(0)) .. Expr(Unevaluated(PackageId(3072), BodyId(1)), No)), ) -> void
"_"@"src/main.t:7..8" [Param(Value, No)]: range of `int` (Unevaluated(PackageId(3072), BodyId(0)) .. Expr(Unevaluated(PackageId(3072), BodyId(1)), No))
"<unnamed>"@"<unknown>:0..0" [Undeclared]: <error>
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:9..13: element range is too small
| note for src/main.t:9..13: computed range size is 0
| error for src/main.t:9..13: zero sized ranges cannot be used in `procedure` declarations
